fix horizontal scroll

--- a/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
+++ b/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
@@ -2,7 +2,7 @@
 
 .search-notebook-page {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: minmax(0, 1fr) 3fr;
     gap: 1rem;
 
     @media (--lg-breakpoint-down) {
